--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/SchoolManagement?useSSL=false&useUnicode=yes
+spring.datasource.url=jdbc:mysql://localhost:3306/SchoolManagement
 
 spring.datasource.username=root
 spring.datasource.password=coderslab
+spring.thymeleaf.mode=LEGACYHTML5
 
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+
+
