--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=coderslab
 spring.thymeleaf.mode=LEGACYHTML5
 
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/resources/
+#spring.mvc.view.suffix=.html
 
 
