--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.thymeleaf.mode=LEGACYHTML5
 
 #spring.mvc.view.prefix=/resources/
 #spring.mvc.view.suffix=.html
-
+security.user.name=admin
+security.user.password=admin
 
